--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,23 +3,15 @@
 
 
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.datasource.url=jdbc:mysql://localhost:3306/bookmanagement
-spring.datasource.username=root
-spring.datasource.password=9545
+spring.datasource.url=jdbc:h2:mem:Book_Management_DB
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
+spring.h2.console.enabled=true
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-
-
-
-
-
-#spring.flyway.locations=classpath:/db/migration
 spring.flyway.baseline-on-migrate=true
 
 
