--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,10 @@ spring.h2.console.enabled=true
 
 spring.flyway.baseline-on-migrate=true
 
+logging.file.name=app.log
+logging.logback.rollingpolicy.file-name-pattern=app-%d{yyyy-MM-dd}.%i.log
+logging.logback.rollingpolicy.max-file-size=1MB
+logging.logback.rollingpolicy.max-history=30
+logging.logback.rollingpolicy.total-size-cap=10MB
 
+#server.port:9001
